--- a/projects.json
+++ b/projects.json
@@ -1,4 +1,4 @@
 [
-    {"name": "project1", "live": "https://abtullohn.github.io/Trivia-game/", "git": "https://github.com/abtullohn/Trivia-game" },
-    {"name": "project2", "live": "https://instantgramification.herokuapp.com/home", "git": "https://github.com/TimRathert/Project-2", "img": "https://i.imgur.com/cKPFIFA.png" }
+    {"name": "project1", "live": "https://abtullohn.github.io/Trivia-game/", "git": "https://github.com/abtullohn/Trivia-game","image": "https://i.imgur.com/cKPFIFA.png" },
+    {"name": "project2", "live": "https://instantgramification.herokuapp.com/home", "git": "https://github.com/TimRathert/Project-2" }
   ]
